# ARC-AGI2-Ensemble

./: .gitignore  README.md  data  pyproject.toml  requirements.txt  run.py  run_primitives.py
arc_primitives_solver/: .gitignore  README.md  requirements.txt  run.py
arc_primitives_solver/arc_prims/: __init__.py  config.py  solver.py
arc_primitives_solver/arc_prims/judge/: filmstrip.py  unified.py
arc_primitives_solver/arc_prims/planner/: __init__.py  english.py  ensemble.py  translator.py  visual.py
arc_primitives_solver/arc_prims/primitives/: dsl.py  interpreter.py
primitives/: run.py  solver.py
primitives/judge/: __init__.py  filmstrip.py  unified.py
primitives/planner/: __init__.py  ensemble.py  feedback_analyzer.py  freeform_critic.py  freeform_interpreter.py  translator.py  visual.py
primitives/primitives/: __init__.py  dsl.py  interpreter.py
primitives/utils/: colors.py
src/: __init__.py  config.py  run.py
src/critic/: __init__.py
src/llms/: __init__.py  chutes_client.py  local_client.py
src/system1/: code_executor.py  code_generator.py
src/system2/: controller.py  state.py
src/utils/: grid_diff.py
systems/: config.py  run.py
systems/critic/: visualizer.py  vlm_critic.py
systems/llms/: chutes_client.py  prompts.py
systems/models/: __init__.py  task.py
systems/system1/: __init__.py  instruction_executor.py  instruction_generator.py
systems/system2/: __init__.py  policy.py
systems/utils/: __init__.py
